temp opt for hit ratio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,6 +138,7 @@ target_link_libraries(pisa
         trecpp
         Porter2
         KrovetzStemmer
+        iter
         )
 target_include_directories(pisa PUBLIC external)
 
