--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "external/taily"]
 	path = external/taily
 	url = https://github.com/pisa-engine/taily.git
+[submodule "external/cppitertools"]
+	path = external/cppitertools
+	url = https://github.com/ryanhaining/cppitertools.git
